1.完善多参数与分页查询； 2.优化update方法，放弃先删除再插入的办法，因为自增的主键id会变。

--- a/src/main/resources/static/components.html
+++ b/src/main/resources/static/components.html
@@ -41,6 +41,7 @@
             "body": [
                 {
                     "type": "crud",
+                    "id": "u:d08d56808c15",
                     "syncLocation": false,
                     "api": {
                         "method": "get",
@@ -222,7 +223,6 @@
                             "id": "u:5e7f4dfc77cd"
                         }
                     ],
-                    "id": "u:d08d56808c15",
                     "perPageAvailable": [
                         10
                     ],
@@ -255,7 +255,11 @@
                         },
                         {
                             "label": "软件",
-                            "to": "/components.html"
+                            "to": "/software.html"
+                        },
+                        {
+                            "label": "漏洞",
+                            "to": "/vulnerability.html"
                         }
                     ],
                     "id": "u:6905cecb9b98"
