--- a/src/main/resources/static/apps.html
+++ b/src/main/resources/static/apps.html
@@ -41,7 +41,7 @@
             "body": [
                 {
                     "type": "crud",
-                    "syncLocation": false,
+                    "syncLocation": true,
                     "api": {
                         "method": "get",
                         "url": "/api/apps",
@@ -206,6 +206,7 @@
                     "messages": {},
                     "filter": {
                         "title": "查询条件",
+                        "submitText": "查询",
                         "body": [
                             {
                                 "type": "input-text",
@@ -215,7 +216,7 @@
                         ]
                     },
                     "perPageField": "pageSize",
-                    "perPage": 100
+                    "perPage": 20
                 }
             ],
             "aside": [
